# invest

./: .gitignore  README.md  idea.md  pyproject.toml
config/: symbol_map.yaml
fidelity-export-extension/: README.md  hook.js  manifest.json  popup.html  popup.js
notebooks/: allocation-and-concentration.ipynb  broker-fidelity.ipynb  broker-robinhood.ipynb  correlations-and-diversification.ipynb  income-dividends-projections.ipynb  opportunities-asset-location.ipynb  opportunities-concentration-rebalancing.ipynb  opportunities-cost-performance.ipynb  opportunities-lot-sale-planner.ipynb  opportunities-tax-loss-harvesting.ipynb  performance-and-risk.ipynb  portfolio.ipynb  refresh.ipynb
src/invest/: __init__.py  analysis.py  brokers.py  config.py  fidelity.py  mapping.py  opportunities.py  pipeline.py  prices.py  robinhood.py  schema.py
src/invest/broker/: __init__.py  base.py
src/invest/broker/fidelity/: __init__.py  positions.py  transactions.py
src/invest/broker/robinhood/: __init__.py  fetch.py  positions.py  transactions.py
src/invest/ledger/: __init__.py  bridge.py  export.py
