[project]
name = "invest"
version = "0.1.0"
description = "Personal portfolio analysis: Fidelity positions truth + yfinance price enrichment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "pyyaml>=6.0",
    "yfinance>=0.2.40",
    "matplotlib>=3.8",
]

[project.scripts]
invest-ingest = "invest.pipeline:main"

[project.optional-dependencies]
notebook = [
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invest"]

[tool.uv]
package = true
